# folder-replicator

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  docker-compose.yml  getting-started.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  reference.html
.github/workflows/: docs.yml
docs/: getting-started.md  index.md  reference.md
folder_replicator/: Folder.py  SyncContext.py  SyncStrategyFactory.py  SyncStrategyLocal.py  __main__.py
folder_replicator/interfaces/: SyncStrategy.py
folder_replicator/lib/: logger.py  sync_scheduler.py
search/: search_index.json
tests/: test_SyncContext.py  test_SyncStrategyFactory.py  test_SyncStrategyLocal.py  test_main.py  test_sync_scheduler.py
