[tool.poetry]
name = "folder-replicator"
version = "0.1.0"
description = ""
authors = ["Pedro Baptista <32106544+pmpbaptista@users.noreply.github.com>"]
readme = "README.md"


packages = [
    { include = "folder_replicator", from = "." }
]


[tool.poetry.scripts]
folder-replicator = "folder_replicator.__main__:main"


[tool.poetry.dependencies]
python = "^3.8.0"
croniter = "^2.0.5"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.4,<9.0.0"
tox = "^4.12.0"
pytest-cov = ">=4.1,<6.0"
ruff = ">=0.1.13,<0.5.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configurations for black
[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


# Configurations for pytest
[tool.pytest]
addopts = ["-ra", "--cov=folder_replicator", "--cov-report=term-missing", "--cov-report=html", "--cov-fail-under=80", "--doctest-modules"]
testpaths = ["tests", "folder_replicator"]

select = ["ALL"]
target-version = "py310"
# Same as Black.
line-length = 100


[tool.coverage.report]
fail_under = 80
exclude_also = [
    "def main",
    "def _parse_args",
    "def __str__",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@property",
    "@staticmethod",
    "@classmethod",
    "def __init__",
    "except PermissionError",
    "except Exception",
    ]

[lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # Use of assert detected.


[lint.mccabe]
# Implicit 10 is too low for our codebase, even black uses 18 as default.
max-complexity = 20


[lint.flake8-builtins]
builtins-ignorelist = ["id"]


[lint.ignore]
ignore = [
  "D211", # No blank lines allowed after function docstring
]


# Configurations for tox
[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py{38,39,310,311,312}, lint
    skipsdist = True
    skip_missing_interpreters = True

    [testenv]
    deps =
        poetry
    commands =
        poetry install -v
        poetry run pytest -ra --cov=folder_replicator --cov-report=term-missing --cov-report=html --doctest-modules

    [testenv:lint]
    deps =
        ruff
    commands =
        ruff check folder_replicator tests

"""
